[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A program for backing up your GitHub and GitLab repos."
license = "MIT"
name = "repo-backup"
repository = "https://github.com/Michael-F-Bryan/repo-backup"
version = "0.2.3-alpha.0"
readme = "README.md"

[badges.appveyor]
repository = "Michael-F-Bryan/repo-backup"

[badges.travis-ci]
repository = "Michael-F-Bryan/repo-backup"

[dependencies]
actix = "0.7.7"
slog = "2.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
failure = "0.1.3"
futures = "0.1"
num_cpus = "1.8"
failure_derive = "0.1.3"
hubcaps = "0.5"
gitlab = "0.1104"
hyper = "0.12"

[dev-dependencies]
tempfile = "3.0.4"
