[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A program for backing up your GitHub and GitLab repos."
license = "MIT"
name = "repo-backup"
repository = "https://github.com/Michael-F-Bryan/repo-backup"
version = "0.2.3-alpha.0"
readme = "README.md"
edition = "2018"

[badges.appveyor]
repository = "Michael-F-Bryan/repo-backup"

[badges.travis-ci]
repository = "Michael-F-Bryan/repo-backup"

[dependencies]
actix = "0.8"
slog = { version = "2.4", features = ["max_level_trace"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
failure = "0.1.3"
futures = "0.1"
num_cpus = "1.8"
failure_derive = "0.1.3"
hubcaps = "0.5"
gitlab = "=0.1104.1"
hyper = "0.12"
structopt = "0.2.13"
slog-async = "2.3.0"
slog-term = "2.4.0"
shellexpand = "1.0.0"

[dev-dependencies]
tempfile = "3.0.4"
