[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A program for backing up your GitHub and GitLab repos."
license = "MIT"
name = "repo-backup"
repository = "https://github.com/Michael-F-Bryan/repo-backup"
version = "0.2.3-alpha.0"
readme = "README.md"
edition = "2018"

[badges.travis-ci]
repository = "Michael-F-Bryan/repo-backup"

[dependencies]
